kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shrodinger-api
  namespace: shrodinger
spec:
  selector:
    matchLabels:
      app: shrodinger-api
  template:
    metadata:
      labels:
        app: shrodinger-api
    spec:
      containers:
        - name: shrodinger-api
          image: public.ecr.aws/axatol/shrodinger:latest
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /
              port: 3000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: shrodinger-api-data
---
apiVersion: v1
kind: Service
metadata:
  name: shrodinger-api
  namespace: shrodinger
  annotations:
    external-dns.alpha.kubernetes.io/hostname: shrodinger-api.axatol.xyz
    external-dns.alpha.kubernetes.io/target: http://shrodinger-api.shrodinger.svc.cluster.local:3000
spec:
  selector:
    app: shrodinger-api
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shrodinger-api
  namespace: shrodinger
spec:
  ingressClassName: traefik
  rules:
    - host: shrodinger-api.axatol.local
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: shrodinger-api
                port:
                  number: 3000
